--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head><body>
 <section>
   <div class="grid">
-    <div class="unit half">
+    <div class="unit whole">
       <div class="blurb-hero">
         <h1> A Slow Guy Learning Web Development.</h1>
         <p class="sub-title">Welcome to a place where eveyday, I will try to share a bit about my learning experiences. Let's begin!</p>
