--- a/exp/proj.html
+++ b/exp/proj.html
@@ -15,8 +15,7 @@
   <div class="grid">
     <div class="unit whole">
       <div class="blurb-hero">
-        <h1> A Slow Guy Learning Web Development.</h1>
-        <p class="sub-title">Welcome to a place where eveyday, I will try to share a bit about my learning experiences. Let's begin!</p>
+        <h1> _CodeProject.</h1>
       </div>
     </div>
   </div>
