--- a/index.html
+++ b/index.html
@@ -20,6 +20,62 @@
       </div>
     </div>
   </div>
+  <div class="grid">
+    <div class="unit whole">
+      <ol class="project-links">
+        <li><a class="title" href="#must-know-web-development-tech">Must-know web development tech</a>
+          <div class="panel">
+            <p>Video gives you a glimpse of Web Development today and illustrates where one may be now. After watching this, it filter a lot of the buffer out there when it come to where to begin.</p><a class="link" href="https://www.youtube.com/watch?v=sBzRwzY7G-k&amp;index=16&amp;list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS" target="_blank">Youtube Video Link</a>
+          </div>
+        </li>
+        <li><a class="title" href="#atom-text-editor">Atom Text Editor for now</a>
+          <div class="panel">
+            <p>After coming face-to-face with this text editor, It's now my new favorite, at least for now. Check out the link below on how to use it.</p><a class="link" href="https://www.youtube.com/watch?v=hPC6keUUiTA" target="_blank">Youtube Video Link</a>
+          </div>
+        </li>
+        <li><a class="title" href="#gulp">Gulp.js Build System #1 - Fundamentals</a>
+          <div class="panel">
+            <p>In part one of this three part series I learn the fundamental concepts behind creating a Gulp.js front-end build system. Its pretty sweet!</p><a class="link" href="https://www.youtube.com/watch?v=LmdT2zhFmn4&amp;index=12&amp;list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS" target="_blank">Youtube Video Link</a>
+          </div>
+        </li>
+        <li><a class="title" href="#jade-tutorial">Jade Tutorial</a>
+          <div class="panel">
+            <p>After messing around this jade A.K.A pug now. It has very powerful features mimicking slighty dynamic languages like php with its use of including files and bunch of other things.</p><a class="link" href="https://www.youtube.com/watch?v=l5AXcXAP4r8&amp;index=14&amp;list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS" target="_blank">Youtube Video Link</a>
+          </div>
+        </li>
+        <li><a class="title" href="#jquery-tutorial">JQuery Tutorial</a>
+          <div class="panel">
+            <p>Learn to use a simple Javascript library that makes for making some stuff easier to do.</p><a class="link" href="https://www.youtube.com/watch?v=BWXggB-T1jQ&amp;list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS&amp;index=15" target="_blank">Youtube Video Link</a>
+          </div>
+        </li>
+        <li><a class="title" href="#css-problems-solved">CSS Tricks : CSS Problems Solved</a>
+          <div class="panel">
+            <p>Took a look a this video, which helps with understanding some common issues when building semantics and how to fix these issues using CSS.</p><a class="link" href="https://www.youtube.com/watch?v=mqLI2oN6rXQ&amp;list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS&amp;index=20" target="_blank">Youtube Video Link</a>
+          </div>
+        </li>
+        <li><a class="title" href="#grunt-code-alpha">grunt-code-alpha</a>
+          <div class="panel">
+            <p>A starter project file, I have began working on to get you running fast by creating a minimal file tree structure and using gulp.</p><a class="link" href="https://github.com/ptejeda1/grunt-code-alpha" target="_blank">View Github</a>
+          </div>
+        </li>
+        <li><a class="title" href="#github-pages">Github Pages</a>
+          <div class="panel">
+            <p>You can now build a simple page/site using github pages, which is what I am using. See link below on how to get started.</p><a class="link" href="https://pages.github.com/" target="_blank">Github Link</a>
+          </div>
+        </li>
+        <li><a class="title" href="#to-do-app">Learn to code a to-do list app in JavaScript</a>
+          <div class="panel">
+            <p>I was able to follow this Video tutorial, which helped me create simple to-do application by only using Javascript.</p><a class="link" href="https://www.youtube.com/watch?v=2wCpkOk2uCg&amp;list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS&amp;index=23" target="_blank">Youtube Video Link</a>
+          </div>
+        </li>
+        <li><a class="title" href="#object-oriented-javascript">Object Oriented JavaScript</a>
+          <div class="panel">
+            <p>Here is a lesson that greatly helps and gives you a starter point into the world of Javascript and the Object Oriented Programming.</p><a class="link" href="https://www.youtube.com/watch?v=O8wwnhdkPE4&amp;index=27&amp;list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS" target="_blank">Youtube Video Link</a>
+          </div>
+        </li>
+      </ol>
+    </div>
+  </div>
 </section><script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.5.3/modernizr.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/barba.js/0.0.10/barba.min.js"></script>
