--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ol class="project-links">
         <li><a class="title" href="#must-know-web-development-tech">Must-know web development tech</a>
           <div class="panel">
-            <p>Video gives you a glimpse of Web Development today and illustrates where one may be now. After watching this, it filter a lot of the buffer out there when it come to where to begin.</p><a class="link" href="https://www.youtube.com/watch?v=sBzRwzY7G-k&amp;index=16&amp;list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS" target="_blank">Youtube Video Link</a>
+            <p>Video gives you a glimpse of Web Development today and illustrates where one may be now. After watching this, it filtered a lot of the buffer out there when it come to where to begin.</p><a class="link" href="https://www.youtube.com/watch?v=sBzRwzY7G-k&amp;index=16&amp;list=PLTFBDMtfpIkzv3umAvLJ6pvmwvjR-KvgS" target="_blank">Youtube Video Link</a>
           </div>
         </li>
         <li><a class="title" href="#atom-text-editor">Atom Text Editor for now</a>
